# api/route/route.go
@@ -35,4 +35,6 @@ func registerV1Routes(e *echo.Group, cfg *config.Config, jwtMiddleware echo.Midd
 	v1Secure.POST("/cashbunny/accounts", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.CreateAccount))
 	v1Secure.GET("/cashbunny/accounts", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.ListAccounts))
 	v1Secure.DELETE("/cashbunny/accounts/:id", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.DeleteAccount))
+	v1Secure.POST("/cashbunny/transactions", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.CreateTransaction))
+	v1Secure.GET("/cashbunny/transactions", handler.CreateEchoHandlerFunc(cfg, h.CashbunnyHandler.ListTransactions))
 }
